--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "camelize": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -28,10 +29,12 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
+    "to-snake-case": "^1.0.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/camelize": "^1.0.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/expect": "^24.3.0",
@@ -46,6 +49,7 @@
     "@types/pg": "^8.11.6",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
+    "@types/to-snake-case": "^1.0.2",
     "@types/typescript": "^2.0.0",
     "@types/winston": "^2.4.4",
     "expect": "^29.7.0",
